--- a/src/Vista/frmLogin.form
+++ b/src/Vista/frmLogin.form
@@ -293,11 +293,14 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
-            <StringItem index="0" value="Admin"/>
-            <StringItem index="1" value="Socio"/>
+            <StringItem index="0" value="Administrador"/>
+            <StringItem index="1" value="Empleado"/>
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boxPerfilActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
